-made menu -add animations

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "webpack  --output-file ./build/bundle.js --devtool sourcemap -w --chache ./cache",
     "build": "webpack --optimize-minimize --optimize-occurrence-order --optimize-dedupe ./src/index.jsx ",
-    "watch": "webpack-dev-server --hot --inline --config webpack.config.js --port 3000 --devtool eval"
+    "watch": "webpack-dev-server --hot --inline --config webpack.config.js --port 3000 --devtool sourcemap",
+    "ngrok": "ngrok http 3000",
+    "debug": "webpack  --output-file ./build/bundle.js --devtool sourcemap -w --chache ./cache"
   },
   "repository": {
     "type": "git",
