--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --optimize-minimize --optimize-occurrence-order --optimize-dedupe ./src/index.jsx ",
-    "watch": "webpack-dev-server --hot --inline --config webpack.config.js --port 3000"
+    "watch": "webpack-dev-server --hot --inline --config webpack.config.js --port 3000 --devtool eval"
   },
   "repository": {
     "type": "git",
