--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react": "^15.0.2",
-    "react-addons-transition-group": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-router": "^2.4.0",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -27,8 +23,13 @@
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
+    "prettier": "^1.14.3",
+    "react": "^15.0.2",
+    "react-addons-transition-group": "^15.0.2",
     "react-css-modules": "^3.7.6",
+    "react-dom": "^15.0.2",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^2.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
