--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "gameHistory",
+  "name": "HoVG",
   "version": "1.0.0",
   "description": "Infographic full of Swag",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --optimize-minimize --optimize-occurrence-order --optimize-dedupe ./src/index.jsx ",
-    "watch": "webpack-dev-server --hot --inline --config webpack.config.js --port 3000 --devtool eval"
+    "watch": "webpack-dev-server --port 3000 "
   },
   "repository": {
     "type": "git",
@@ -15,23 +15,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "postcss-cssnext": "^2.5.2",
-    "postcss-loader": "^0.8.2",
-    "precss": "^1.4.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-react-css-modules": "^3.4.2",
+    "css-loader": "^1.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.0.0",
+    "precss": "2.0.0",
     "prettier": "^1.14.3",
-    "react": "^15.0.2",
+    "react-css-modules": "^4.7.7",
+    "react-hot-loader": "^4.3.11",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
     "react-addons-transition-group": "^15.0.2",
-    "react-css-modules": "^3.7.6",
-    "react-dom": "^15.0.2",
-    "react-hot-loader": "^1.3.0",
-    "react-router": "^2.4.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "1.x"
   }
 }
