Migrate to newer gsap

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 .idea/
-.idea/HoVG.iml
-.idea/codeStyles/
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
+node_modules/
+dist/
+bundle.js
