--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --optimize-minimize --optimize-occurrence-order --optimize-dedupe ./src/index.jsx ",
+    "build": "webpack --config ./webpack.config.prod.js ./src/index.js ",
     "watch": "webpack-dev-server --port 3000 "
   },
   "repository": {
@@ -19,24 +19,20 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-react-css-modules": "^3.4.2",
     "css-loader": "^1.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.0.0",
-    "precss": "2.0.0",
     "prettier": "^1.14.3",
     "react-css-modules": "^4.7.7",
-    "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "gsap": "^2.0.2",
     "react": "^16.5.2",
-    "react-addons-transition-group": "^15.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "1.x"
